# geometric-sampling

./: .RData  .Rhistory  .gitignore  Astar.ipynb  Expectation.ipynb  GFS _Plots.ipynb  README.md  Wave-Cube.R  aggregate.ipynb  clustering.ipynb  doubly_test.ipynb  dubly_balanced_clustering.ipynb  meuse_river.dbf  meuse_river.shp  meuse_river.shx  pyproject.toml  sandbox.ipynb  sandbox.py  simulation.ipynb  simulation_Bardia_Final.ipynb  simulation_bardia.ipynb  swiss.csv  zone_problem.ipynb
Bardia GFS/: A_Star_Optimal_GFS_1.ipynb  A_Star_Optimal_GFS_3.ipynb  A_Star_Optimal_GFS_5.ipynb  A_Star_Optimal_GFS_6 copy 2.ipynb  A_Star_Optimal_GFS_6 copy.ipynb  A_Star_Optimal_GFS_6.ipynb  A_Star_Optimal_GFS_6_simulate_data.ipynb  Plot Results.ipynb  best_design.pkl  best_run.pkl
Simulations/: A_Star_Optimal_GFS_6 copy 2-Copy1.ipynb  Add_Line_Popu.ipynb  Add_Wave_Cube_to_Three_Popu.ipynb  Add_Wave_Simulated_Popu_n=4.ipynb  Expectation.ipynb  Expectation_bardia.ipynb  Generate_samples_in_R copy.ipynb  Generate_samples_in_R.ipynb  Some_Tests.ipynb  Wave-Cube.R  different_zone_resutls.ipynb  different_zone_resutls_add_centroids.ipynb  n-Means_Meuse.ipynb  n-Means_Swiss.ipynb  n-Means_Swiss_timeseris_2.ipynb  n-Means_Swiss_timeseris_2_n=10.ipynb  n-Means_Swiss_timeseris_3.ipynb  simulation_Bardia_Final.ipynb  wave_grid_uneq_n=5_samples.csv
Store/: A_Star_Optimal_GFS_0.ipynb  A_Star_Optimal_GFS_3.ipynb  A_Star_Optimal_GFS_5.ipynb  astar copy.py  astar_before_nonlinear_20_jun_2025.py  astar_elit.py  astar_many_initial.py  astar_simple_great.py  clustering.ipynb  doubly_test.ipynb  (+4 more)
(+422 files in other folders)
