[project]
name = "geometric-sampling"
version = "0.4.3"
description = "Python package for Geometric Sampling Method"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "scikit-learn",
    "scipy",
]
authors = [
    { name = "Bardia Panahbehagh", email = "bardia.panah@gmail.com" },
    { name = "Mehdi Mohebbi", email = "mehdi.mohebbi23@gmail.com" },
    { name = "AmirMohammad HosseiniNasab", email = "awmirhn@gmail.com" },
    { name = "Mehdi Hosseini Moghadam", email = "m.h.moghadam1996@gmail.com" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "notebook>=7.2.2",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.4",
    "ruff>=0.7.1",
    "types-tqdm>=4.66.0.20240417",
]

[tool.hatch.build.targets.wheel]
packages = ["geometric_sampling"]
